modify: create csm table

--- a/da/csm-table.ipynb
+++ b/da/csm-table.ipynb
@@ -97,6 +97,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id\n",
+       "admiral     False\n",
+       "agents      False\n",
+       "agnes       False\n",
+       "al          False\n",
+       "alfonso     False\n",
+       "            ...  \n",
+       "winnie      False\n",
+       "wolfgang    False\n",
+       "yuka        False\n",
+       "zell        False\n",
+       "zucker      False\n",
+       "Name: hobby, Length: 391, dtype: bool"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars['hobby'].isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -477,23 +509,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for id in table.columns:\n",
+    "  ref = chars.loc[id]\n",
+    "  vectors = pd.DataFrame(\n",
+    "    index=chars.index,\n",
+    "    columns = ['birthday', 'hobby', 'personality', 'colors', 'styles']\n",
+    "  )\n",
+    "  compare_hobby = partial(compare_simple, ref.hobby)\n",
+    "  compare_personality = partial(compare_simple, ref.personality)\n",
+    "  compare_colors = partial(compare_set, ref.colors)\n",
+    "  compare_styles = partial(compare_set, ref.styles)\n",
+    "  compare_birthday = partial(compare_yday, ref.birthday)\n",
+    "\n",
+    "  vectors['hobby'] = chars['hobby'].apply(compare_hobby)\n",
+    "  vectors['personality'] = chars['personality'].apply(compare_personality)\n",
+    "  vectors['colors'] = chars['colors'].apply(compare_colors)\n",
+    "  vectors['styles'] = chars['styles'].apply(compare_styles)\n",
+    "  vectors['birthday'] = chars['birthday'].apply(compare_birthday)\n",
+    "  vectors['distance'] = vectors.apply(\n",
+    "    lambda row: np.sqrt(sum(row**2)), axis=1\n",
+    "  )\n",
+    "\n",
+    "  table[id] = vectors['distance']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "id\n",
+       "admiral     0.778922\n",
+       "agents      1.821078\n",
+       "agnes       2.004686\n",
+       "al          2.172864\n",
+       "alfonso     1.807566\n",
+       "              ...   \n",
+       "winnie      1.892358\n",
+       "wolfgang    1.545394\n",
+       "yuka        1.837622\n",
+       "zell        1.806802\n",
+       "zucker      1.546915\n",
+       "Name: ike, Length: 391, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "table.iat[0, 0]"
+    "table.loc['ike']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 자료를 csv와 json으로 내보냅니다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### csv\n",
+    "\n",
+    "아마 필요 없겠지만 그냥 혹시\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
