--- a/da/fix-char.ipynb
+++ b/da/fix-char.ipynb
@@ -9,15 +9,483 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast\n",
+    "from pprint import pprint\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>special</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>image_photo</th>\n",
+       "      <th>image_house</th>\n",
+       "      <th>species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>...</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>personality_subtype</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>catchphrase</th>\n",
+       "      <th>favorite_song</th>\n",
+       "      <th>favorite_saying</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "      <th>tier</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>admiral</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/br...</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>...</td>\n",
+       "      <td>무뚝뚝</td>\n",
+       "      <td>A</td>\n",
+       "      <td>자연</td>\n",
+       "      <td>aye aye</td>\n",
+       "      <td>Steep Hill</td>\n",
+       "      <td>Only quitters give up.</td>\n",
+       "      <td>['쿨']</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>89.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>agents</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/sq...</td>\n",
+       "      <td>Squirrel</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>...</td>\n",
+       "      <td>아이돌</td>\n",
+       "      <td>B</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>sidekick</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>You gotta put the pedal to the metal!</td>\n",
+       "      <td>['심플', '액티브']</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>agnes</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/pi...</td>\n",
+       "      <td>Pig</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>...</td>\n",
+       "      <td>단순 활발</td>\n",
+       "      <td>A</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>snuffle</td>\n",
+       "      <td>K.K. House</td>\n",
+       "      <td>You reap what you sow.</td>\n",
+       "      <td>['심플', '엘레강스']</td>\n",
+       "      <td>['하양색', '핑크색']</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>al</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/go...</td>\n",
+       "      <td>Gorilla</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>...</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>B</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>ayyyeee</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>Life is a buffet. Always go back for seconds.</td>\n",
+       "      <td>['액티브']</td>\n",
+       "      <td>['하양색', '빨강색']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/cr...</td>\n",
+       "      <td>Alligator</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>...</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>B</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>it'sa me</td>\n",
+       "      <td>Forest Life</td>\n",
+       "      <td>Slow and steady wins the race.</td>\n",
+       "      <td>['심플']</td>\n",
+       "      <td>['빨강색', '파랑색']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       id  special  name_en name_ko  \\\n",
+       "0           0  admiral    False  Admiral      일섭   \n",
+       "1           1   agents    False  Agent S      2호   \n",
+       "2           2    agnes    False    Agnes    아그네스   \n",
+       "3           3       al    False       Al      우락   \n",
+       "4           4  alfonso    False  Alfonso    알베르트   \n",
+       "\n",
+       "                                     image_icon  \\\n",
+       "0  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "                                         image_photo  \\\n",
+       "0  https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...   \n",
+       "1  https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...   \n",
+       "2  https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...   \n",
+       "3  https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...   \n",
+       "4  https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...   \n",
+       "\n",
+       "                                         image_house    species  gender  ...  \\\n",
+       "0  https://acnhcdn.com/drivesync/render/houses/br...       Bird    Male  ...   \n",
+       "1  https://acnhcdn.com/drivesync/render/houses/sq...   Squirrel  Female  ...   \n",
+       "2  https://acnhcdn.com/drivesync/render/houses/pi...        Pig  Female  ...   \n",
+       "3  https://acnhcdn.com/drivesync/render/houses/go...    Gorilla    Male  ...   \n",
+       "4  https://acnhcdn.com/drivesync/render/houses/cr...  Alligator    Male  ...   \n",
+       "\n",
+       "  personality personality_subtype  hobby  catchphrase  favorite_song  \\\n",
+       "0         무뚝뚝                   A     자연      aye aye     Steep Hill   \n",
+       "1         아이돌                   B     운동     sidekick  Go K.K. Rider   \n",
+       "2       단순 활발                   A     놀이      snuffle     K.K. House   \n",
+       "3          먹보                   B     운동      ayyyeee  Go K.K. Rider   \n",
+       "4          먹보                   B     놀이     it'sa me    Forest Life   \n",
+       "\n",
+       "                                 favorite_saying          styles  \\\n",
+       "0                         Only quitters give up.           ['쿨']   \n",
+       "1          You gotta put the pedal to the metal!   ['심플', '액티브']   \n",
+       "2                         You reap what you sow.  ['심플', '엘레강스']   \n",
+       "3  Life is a buffet. Always go back for seconds.         ['액티브']   \n",
+       "4                 Slow and steady wins the race.          ['심플']   \n",
+       "\n",
+       "           colors tier  rank  \n",
+       "0  ['검정색', '파랑색']  6.0  89.0  \n",
+       "1  ['검정색', '파랑색']  6.0  45.0  \n",
+       "2  ['하양색', '핑크색']  4.0  26.0  \n",
+       "3  ['하양색', '빨강색']  6.0  19.0  \n",
+       "4  ['빨강색', '파랑색']  6.0   6.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars = pd.read_excel('./datasets/characters.xlsx')\n",
+    "chars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 452 entries, 0 to 451\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   id                   451 non-null    object \n",
+      " 1   special              452 non-null    bool   \n",
+      " 2   name_en              452 non-null    object \n",
+      " 3   name_ko              452 non-null    object \n",
+      " 4   image_icon           452 non-null    object \n",
+      " 5   image_photo          452 non-null    object \n",
+      " 6   image_house          391 non-null    object \n",
+      " 7   species              391 non-null    object \n",
+      " 8   gender               452 non-null    object \n",
+      " 9   gender_asia          452 non-null    object \n",
+      " 10  birthday             452 non-null    object \n",
+      " 11  birthday_month       452 non-null    int64  \n",
+      " 12  birthday_day         452 non-null    int64  \n",
+      " 13  personality          391 non-null    object \n",
+      " 14  personality_subtype  391 non-null    object \n",
+      " 15  hobby                391 non-null    object \n",
+      " 16  catchphrase          391 non-null    object \n",
+      " 17  favorite_song        391 non-null    object \n",
+      " 18  favorite_saying      391 non-null    object \n",
+      " 19  styles               391 non-null    object \n",
+      " 20  colors               391 non-null    object \n",
+      " 21  tier                 390 non-null    float64\n",
+      " 22  rank                 390 non-null    float64\n",
+      "dtypes: bool(1), float64(2), int64(2), object(18)\n",
+      "memory usage: 78.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars = chars.drop('Unnamed: 0', axis=1)\n",
+    "chars.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>colors</th>\n",
+       "      <th>styles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>['쿨']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>['심플', '액티브']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['하양색', '핑크색']</td>\n",
+       "      <td>['심플', '엘레강스']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['하양색', '빨강색']</td>\n",
+       "      <td>['액티브']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['빨강색', '파랑색']</td>\n",
+       "      <td>['심플']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>['초록색', '검정색']</td>\n",
+       "      <td>['액티브', '쿨']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>['오렌지색', '노랑색']</td>\n",
+       "      <td>['엘레강스', '쿨']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>['보라색', '회색']</td>\n",
+       "      <td>['고져스', '쿨']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>['파랑색', '노랑색']</td>\n",
+       "      <td>['심플', '큐트']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>452 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              colors          styles\n",
+       "0     ['검정색', '파랑색']           ['쿨']\n",
+       "1     ['검정색', '파랑색']   ['심플', '액티브']\n",
+       "2     ['하양색', '핑크색']  ['심플', '엘레강스']\n",
+       "3     ['하양색', '빨강색']         ['액티브']\n",
+       "4     ['빨강색', '파랑색']          ['심플']\n",
+       "..               ...             ...\n",
+       "447   ['초록색', '검정색']    ['액티브', '쿨']\n",
+       "448  ['오렌지색', '노랑색']   ['엘레강스', '쿨']\n",
+       "449    ['보라색', '회색']    ['고져스', '쿨']\n",
+       "450              NaN             NaN\n",
+       "451   ['파랑색', '노랑색']    ['심플', '큐트']\n",
+       "\n",
+       "[452 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.loc[:, ['colors', 'styles']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars['colors'] = chars['colors'].apply(\n",
+    "  lambda expr: ast.literal_eval(expr) if type(expr) == str else expr\n",
+    ")\n",
+    "chars['styles'] = chars['styles'].apply(\n",
+    "  lambda expr: ast.literal_eval(expr) if type(expr) == str else expr\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars.loc[371, 'image_photo'] = 'https://acnhcdn.com/latest/NpcBromide/NpcSpHgs.png'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://acnhcdn.com/latest/NpcBromide/NpcSpHgs.png'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.loc[371, 'image_photo']"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "6a28367f67cdc883bf0651ab926a45cdaf5821f65ab5104ac3f819fe9582a76b"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
