modify: reorder excel columns

--- a/da/fix-char.ipynb
+++ b/da/fix-char.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[452 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -456,13 +456,361 @@
        "'https://acnhcdn.com/latest/NpcBromide/NpcSpHgs.png'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chars.loc[371, 'image_photo']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 컬럼 정리\n",
+    "\n",
+    "하는 김에 합니다.\n",
+    "\n",
+    "json에선 의미가 없지만 엑셀에선 정리가 좀 돼있으면 편합니다\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['birthday',\n",
+      " 'birthday_day',\n",
+      " 'birthday_month',\n",
+      " 'catchphrase',\n",
+      " 'colors',\n",
+      " 'favorite_saying',\n",
+      " 'favorite_song',\n",
+      " 'gender',\n",
+      " 'gender_asia',\n",
+      " 'hobby',\n",
+      " 'id',\n",
+      " 'image_house',\n",
+      " 'image_icon',\n",
+      " 'image_photo',\n",
+      " 'name_en',\n",
+      " 'name_ko',\n",
+      " 'personality',\n",
+      " 'personality_subtype',\n",
+      " 'rank',\n",
+      " 'special',\n",
+      " 'species',\n",
+      " 'styles',\n",
+      " 'tier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chars.columns = sorted(chars.columns)\n",
+    "pprint(sorted(list(chars.columns)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars = chars[[\n",
+    "  'id',\n",
+    "  'name_ko',\n",
+    "  'name_en',\n",
+    "  'special',\n",
+    "  'gender',\n",
+    "  'gender_asia',\n",
+    "  'species',\n",
+    "  'birthday',\n",
+    "  'birthday_month',\n",
+    "  'birthday_day',\n",
+    "  'hobby',\n",
+    "  'personality',\n",
+    "  'personality_subtype',\n",
+    "  'colors',\n",
+    "  'styles',\n",
+    "  'tier',\n",
+    "  'rank',\n",
+    "  'catchphrase',\n",
+    "  'favorite_saying',\n",
+    "  'favorite_song',\n",
+    "  'image_house',\n",
+    "  'image_icon',\n",
+    "  'image_photo',\n",
+    "]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>special</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>gender_asia</th>\n",
+       "      <th>species</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "      <th>...</th>\n",
+       "      <th>colors</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>tier</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>catchphrase</th>\n",
+       "      <th>favorite_saying</th>\n",
+       "      <th>favorite_song</th>\n",
+       "      <th>image_house</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>image_photo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>01-27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "      <td>[쿨]</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>aye aye</td>\n",
+       "      <td>Only quitters give up.</td>\n",
+       "      <td>Steep Hill</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/br...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agents</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Squirrel</td>\n",
+       "      <td>07-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "      <td>[심플, 액티브]</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>sidekick</td>\n",
+       "      <td>You gotta put the pedal to the metal!</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/sq...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Pig</td>\n",
+       "      <td>04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[하양색, 핑크색]</td>\n",
+       "      <td>[심플, 엘레강스]</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>snuffle</td>\n",
+       "      <td>You reap what you sow.</td>\n",
+       "      <td>K.K. House</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/pi...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Gorilla</td>\n",
+       "      <td>10-18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[하양색, 빨강색]</td>\n",
+       "      <td>[액티브]</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>ayyyeee</td>\n",
+       "      <td>Life is a buffet. Always go back for seconds.</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/go...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Alligator</td>\n",
+       "      <td>06-09</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[빨강색, 파랑색]</td>\n",
+       "      <td>[심플]</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>it'sa me</td>\n",
+       "      <td>Slow and steady wins the race.</td>\n",
+       "      <td>Forest Life</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/cr...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id name_ko  name_en  special  gender gender_asia    species birthday  \\\n",
+       "0  admiral      일섭  Admiral    False    Male        Male       Bird    01-27   \n",
+       "1   agents      2호  Agent S    False  Female      Female   Squirrel    07-02   \n",
+       "2    agnes    아그네스    Agnes    False  Female      Female        Pig    04-21   \n",
+       "3       al      우락       Al    False    Male        Male    Gorilla    10-18   \n",
+       "4  alfonso    알베르트  Alfonso    False    Male        Male  Alligator    06-09   \n",
+       "\n",
+       "   birthday_month  birthday_day  ...      colors      styles tier  rank  \\\n",
+       "0               1            27  ...  [검정색, 파랑색]         [쿨]  6.0  89.0   \n",
+       "1               7             2  ...  [검정색, 파랑색]   [심플, 액티브]  6.0  45.0   \n",
+       "2               4            21  ...  [하양색, 핑크색]  [심플, 엘레강스]  4.0  26.0   \n",
+       "3              10            18  ...  [하양색, 빨강색]       [액티브]  6.0  19.0   \n",
+       "4               6             9  ...  [빨강색, 파랑색]        [심플]  6.0   6.0   \n",
+       "\n",
+       "  catchphrase                                favorite_saying  favorite_song  \\\n",
+       "0     aye aye                         Only quitters give up.     Steep Hill   \n",
+       "1    sidekick          You gotta put the pedal to the metal!  Go K.K. Rider   \n",
+       "2     snuffle                         You reap what you sow.     K.K. House   \n",
+       "3     ayyyeee  Life is a buffet. Always go back for seconds.  Go K.K. Rider   \n",
+       "4    it'sa me                 Slow and steady wins the race.    Forest Life   \n",
+       "\n",
+       "                                         image_house  \\\n",
+       "0  https://acnhcdn.com/drivesync/render/houses/br...   \n",
+       "1  https://acnhcdn.com/drivesync/render/houses/sq...   \n",
+       "2  https://acnhcdn.com/drivesync/render/houses/pi...   \n",
+       "3  https://acnhcdn.com/drivesync/render/houses/go...   \n",
+       "4  https://acnhcdn.com/drivesync/render/houses/cr...   \n",
+       "\n",
+       "                                     image_icon  \\\n",
+       "0  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "                                         image_photo  \n",
+       "0  https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...  \n",
+       "1  https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...  \n",
+       "2  https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...  \n",
+       "3  https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...  \n",
+       "4  https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Bird\n",
+       "1     Squirrel\n",
+       "2          Pig\n",
+       "3      Gorilla\n",
+       "4    Alligator\n",
+       "Name: species, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars['species'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## species 번역\n",
+    "\n",
+    "다른 팀원이 해놨다고 하니까 그 파일을 좀 찾아보고 오겠습니다.\n"
    ]
   }
  ],
