--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pprint import pprint\n",
+    "import itertools\n",
     "from operator import itemgetter\n",
+    "from pprint import pprint\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -24,19 +25,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 452 entries, 0 to 451\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   id                   451 non-null    object \n",
+      " 1   name_ko              452 non-null    object \n",
+      " 2   name_en              452 non-null    object \n",
+      " 3   special              452 non-null    bool   \n",
+      " 4   gender               452 non-null    object \n",
+      " 5   gender_asia          452 non-null    object \n",
+      " 6   species              391 non-null    object \n",
+      " 7   birthday             452 non-null    object \n",
+      " 8   birthday_month       452 non-null    int64  \n",
+      " 9   birthday_day         452 non-null    int64  \n",
+      " 10  birthday_yday        452 non-null    int64  \n",
+      " 11  hobby                391 non-null    object \n",
+      " 12  personality          391 non-null    object \n",
+      " 13  personality_subtype  391 non-null    object \n",
+      " 14  colors               391 non-null    object \n",
+      " 15  styles               391 non-null    object \n",
+      " 16  tier                 390 non-null    float64\n",
+      " 17  rank                 390 non-null    float64\n",
+      " 18  catchphrase          391 non-null    object \n",
+      " 19  favorite_saying      391 non-null    object \n",
+      " 20  favorite_song        391 non-null    object \n",
+      " 21  image_house          391 non-null    object \n",
+      " 22  image_icon           452 non-null    object \n",
+      " 23  image_photo          452 non-null    object \n",
+      "dtypes: bool(1), float64(2), int64(3), object(18)\n",
+      "memory usage: 81.8+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>special</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>gender_asia</th>\n",
+       "      <th>species</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "      <th>...</th>\n",
+       "      <th>colors</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>tier</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>catchphrase</th>\n",
+       "      <th>favorite_saying</th>\n",
+       "      <th>favorite_song</th>\n",
+       "      <th>image_house</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>image_photo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>새</td>\n",
+       "      <td>01-27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>['쿨']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>aye aye</td>\n",
+       "      <td>Only quitters give up.</td>\n",
+       "      <td>Steep Hill</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/br...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agents</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>다람쥐</td>\n",
+       "      <td>07-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['검정색', '파랑색']</td>\n",
+       "      <td>['심플', '액티브']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>sidekick</td>\n",
+       "      <td>You gotta put the pedal to the metal!</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/sq...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>돼지</td>\n",
+       "      <td>04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['하양색', '핑크색']</td>\n",
+       "      <td>['심플', '엘레강스']</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>snuffle</td>\n",
+       "      <td>You reap what you sow.</td>\n",
+       "      <td>K.K. House</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/pi...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>고릴라</td>\n",
+       "      <td>10-18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['하양색', '빨강색']</td>\n",
+       "      <td>['액티브']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>ayyyeee</td>\n",
+       "      <td>Life is a buffet. Always go back for seconds.</td>\n",
+       "      <td>Go K.K. Rider</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/go...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>악어</td>\n",
+       "      <td>06-09</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['빨강색', '파랑색']</td>\n",
+       "      <td>['심플']</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>it'sa me</td>\n",
+       "      <td>Slow and steady wins the race.</td>\n",
+       "      <td>Forest Life</td>\n",
+       "      <td>https://acnhcdn.com/drivesync/render/houses/cr...</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id name_ko  name_en  special  gender gender_asia species birthday  \\\n",
+       "0  admiral      일섭  Admiral    False    Male        Male       새    01-27   \n",
+       "1   agents      2호  Agent S    False  Female      Female     다람쥐    07-02   \n",
+       "2    agnes    아그네스    Agnes    False  Female      Female      돼지    04-21   \n",
+       "3       al      우락       Al    False    Male        Male     고릴라    10-18   \n",
+       "4  alfonso    알베르트  Alfonso    False    Male        Male      악어    06-09   \n",
+       "\n",
+       "   birthday_month  birthday_day  ...          colors          styles tier  \\\n",
+       "0               1            27  ...  ['검정색', '파랑색']           ['쿨']  6.0   \n",
+       "1               7             2  ...  ['검정색', '파랑색']   ['심플', '액티브']  6.0   \n",
+       "2               4            21  ...  ['하양색', '핑크색']  ['심플', '엘레강스']  4.0   \n",
+       "3              10            18  ...  ['하양색', '빨강색']         ['액티브']  6.0   \n",
+       "4               6             9  ...  ['빨강색', '파랑색']          ['심플']  6.0   \n",
+       "\n",
+       "   rank catchphrase                                favorite_saying  \\\n",
+       "0  89.0     aye aye                         Only quitters give up.   \n",
+       "1  45.0    sidekick          You gotta put the pedal to the metal!   \n",
+       "2  26.0     snuffle                         You reap what you sow.   \n",
+       "3  19.0     ayyyeee  Life is a buffet. Always go back for seconds.   \n",
+       "4   6.0    it'sa me                 Slow and steady wins the race.   \n",
+       "\n",
+       "   favorite_song                                        image_house  \\\n",
+       "0     Steep Hill  https://acnhcdn.com/drivesync/render/houses/br...   \n",
+       "1  Go K.K. Rider  https://acnhcdn.com/drivesync/render/houses/sq...   \n",
+       "2     K.K. House  https://acnhcdn.com/drivesync/render/houses/pi...   \n",
+       "3  Go K.K. Rider  https://acnhcdn.com/drivesync/render/houses/go...   \n",
+       "4    Forest Life  https://acnhcdn.com/drivesync/render/houses/cr...   \n",
+       "\n",
+       "                                     image_icon  \\\n",
+       "0  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "                                         image_photo  \n",
+       "0  https://acnhcdn.com/latest/NpcBromide/NpcNmlBr...  \n",
+       "1  https://acnhcdn.com/latest/NpcBromide/NpcNmlSq...  \n",
+       "2  https://acnhcdn.com/latest/NpcBromide/NpcNmlPi...  \n",
+       "3  https://acnhcdn.com/latest/NpcBromide/NpcNmlGo...  \n",
+       "4  https://acnhcdn.com/latest/NpcBromide/NpcNmlCr...  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chars = pd.read_excel('./datasets/characters.xlsx')\n",
     "chars.info()\n",
     "chars.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "6a28367f67cdc883bf0651ab926a45cdaf5821f65ab5104ac3f819fe9582a76b"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
