da: see permutations of properties

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -303,10 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<itertools.permutations at 0x2274e7f9580>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(itertools.permutations(['성격', '취미', '색깔', '성별'], 2))"
+   ]
   }
  ],
  "metadata": {
