da: hobby by personality

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,24 +312,32 @@
        "[('성격', '취미'),\n",
        " ('성격', '색깔'),\n",
        " ('성격', '성별'),\n",
+       " ('성격', '스타일'),\n",
        " ('취미', '성격'),\n",
        " ('취미', '색깔'),\n",
        " ('취미', '성별'),\n",
+       " ('취미', '스타일'),\n",
        " ('색깔', '성격'),\n",
        " ('색깔', '취미'),\n",
        " ('색깔', '성별'),\n",
+       " ('색깔', '스타일'),\n",
        " ('성별', '성격'),\n",
        " ('성별', '취미'),\n",
-       " ('성별', '색깔')]"
+       " ('성별', '색깔'),\n",
+       " ('성별', '스타일'),\n",
+       " ('스타일', '성격'),\n",
+       " ('스타일', '취미'),\n",
+       " ('스타일', '색깔'),\n",
+       " ('스타일', '성별')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(itertools.permutations(['성격', '취미', '색깔', '성별'], 2))"
+    "list(itertools.permutations(['성격', '취미', '색깔', '성별', '스타일'], 2))"
    ]
   },
   {
@@ -339,6 +347,104 @@
     "## 성격별 xx\n",
     "\n",
     "성격별로 뭔가 달라지는 게 있을까요\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality  hobby\n",
+       "느끼함          교육       11\n",
+       "             운동        4\n",
+       "             음악       14\n",
+       "             자연        5\n",
+       "단순 활발        놀이        7\n",
+       "             운동        6\n",
+       "             음악       11\n",
+       "먹보           교육        1\n",
+       "             놀이       32\n",
+       "             운동        4\n",
+       "             자연       23\n",
+       "무뚝뚝          교육       19\n",
+       "             놀이        2\n",
+       "             운동       10\n",
+       "             음악       13\n",
+       "             자연       11\n",
+       "성숙함          교육       10\n",
+       "             운동        3\n",
+       "             음악        8\n",
+       "             자연        2\n",
+       "             패션       32\n",
+       "아이돌          놀이        9\n",
+       "             운동        3\n",
+       "             음악        5\n",
+       "             자연        1\n",
+       "             패션       31\n",
+       "운동광          교육        1\n",
+       "             놀이       15\n",
+       "             운동       36\n",
+       "             음악        3\n",
+       "친절함          교육       22\n",
+       "             음악       10\n",
+       "             자연       24\n",
+       "             패션        3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['personality', 'hobby']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성격별 취미\n",
+    "```\n",
+    "느끼함          교육       11\n",
+    "             운동        4\n",
+    "             음악       14\n",
+    "             자연        5\n",
+    "단순 활발        놀이        7\n",
+    "             운동        6\n",
+    "             음악       11\n",
+    "먹보           교육        1\n",
+    "             놀이       32\n",
+    "             운동        4\n",
+    "             자연       23\n",
+    "무뚝뚝          교육       19\n",
+    "             놀이        2\n",
+    "             운동       10\n",
+    "             음악       13\n",
+    "             자연       11\n",
+    "성숙함          교육       10\n",
+    "             운동        3\n",
+    "             음악        8\n",
+    "             자연        2\n",
+    "             패션       32\n",
+    "아이돌          놀이        9\n",
+    "             운동        3\n",
+    "             음악        5\n",
+    "             자연        1\n",
+    "             패션       31\n",
+    "운동광          교육        1\n",
+    "             놀이       15\n",
+    "             운동       36\n",
+    "             음악        3\n",
+    "친절함          교육       22\n",
+    "             음악       10\n",
+    "             자연       24\n",
+    "             패션        3\n",
+    "```"
    ]
   }
  ],
