da: give up 2-value properties

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -422,49 +422,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 성격별 취미\n",
-    "```\n",
-    "느끼함          교육       11\n",
-    "             운동        4\n",
-    "             음악       14\n",
-    "             자연        5\n",
-    "단순 활발        놀이        7\n",
-    "             운동        6\n",
-    "             음악       11\n",
-    "먹보           교육        1\n",
-    "             놀이       32\n",
-    "             운동        4\n",
-    "             자연       23\n",
-    "무뚝뚝          교육       19\n",
-    "             놀이        2\n",
-    "             운동       10\n",
-    "             음악       13\n",
-    "             자연       11\n",
-    "성숙함          교육       10\n",
-    "             운동        3\n",
-    "             음악        8\n",
-    "             자연        2\n",
-    "             패션       32\n",
-    "아이돌          놀이        9\n",
-    "             운동        3\n",
-    "             음악        5\n",
-    "             자연        1\n",
-    "             패션       31\n",
-    "운동광          교육        1\n",
-    "             놀이       15\n",
-    "             운동       36\n",
-    "             음악        3\n",
-    "친절함          교육       22\n",
-    "             음악       10\n",
-    "             자연       24\n",
-    "             패션        3\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -553,6 +510,108 @@
     "\n",
     "chars[['color a', 'color b']].tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality  color a\n",
+       "느끼함          갈색          2\n",
+       "             보라색         4\n",
+       "             빨강색         2\n",
+       "             연파랑색        4\n",
+       "             오렌지색        2\n",
+       "                        ..\n",
+       "친절함          초록색         7\n",
+       "             컬러풀색        3\n",
+       "             핑크색         1\n",
+       "             하양색        16\n",
+       "             회색          3\n",
+       "Length: 86, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['personality', 'color a']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality  color b\n",
+       "느끼함          검정색         9\n",
+       "             노랑색         1\n",
+       "             베이지색        1\n",
+       "             빨강색         4\n",
+       "             초록색         4\n",
+       "                        ..\n",
+       "친절함          연파랑색        2\n",
+       "             초록색         3\n",
+       "             컬러풀색        2\n",
+       "             파랑색         5\n",
+       "             핑크색        18\n",
+       "Length: 72, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['personality', 'color b']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FrozenList(['personality', 'color a'])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = chars.groupby(['personality', 'color a']).size()\n",
+    "b = chars.groupby(['personality', 'color b']).size()\n",
+    "a.index.names\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "색깔/스타일 등 한개 또는 두개 있는건 좀 어려운 것 같습니다.\n",
+    "\n",
+    "하려면 할 수는 있겠지만 별로 수지맞는 작업은 아닌 것 같으니 일단 스킵\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
